add external dns records check

--- a/inventory/regionOne/group_vars/all/osh.yml
+++ b/inventory/regionOne/group_vars/all/osh.yml
@@ -58,6 +58,7 @@ OS_release: "queens"
 region: "RegionOne"
 multi_region:
   master: true
+service_domain: "default"
 supplementary_domains:
 - prod
 - dev
