--- a/inventory/regionTwo/group_vars/all/osh.yml
+++ b/inventory/regionTwo/group_vars/all/osh.yml
@@ -1,22 +1,22 @@
 #---------------------------Networks---------#
 ceph:
- net: "192.168.12.0/24"
- vlan: 1500
- iface: "ens5"
- gw: "192.168.12.194"
-# mtu: 9000
+  net: "192.168.2.0/24"
+  vlan: 1500
+  iface: "ens5"
+  gw: "192.168.2.194"
+#  mtu: 9000
 k8s:
- net: "192.168.11.0/24"
- vlan: 1501
- iface: "ens4"
-default_gw: "192.168.10.138"
-vip_ip: "192.168.10.10"
+  net: "192.168.1.0/24"
+  vlan: 1501
+  iface: "ens4"
+default_gw: "192.168.0.138"
+vip_ip: "192.168.0.10"
 dns_srvs:
-- "192.168.10.138"
+- "192.168.0.138"
 ntp_srvs:
 - "194.190.168.1"
 #---------------------------Images-----------#
-local_docker_registry: "192.168.10.138:5000"
+local_docker_registry: "192.168.0.138:5000"
 contrail_tag: "queens-master-454"
 osh_tag: 1.1
 pull_policy: "IfNotPresent"
@@ -24,16 +24,16 @@ pull_policy: "IfNotPresent"
 tunables: "hammer"
 replication: 3 
 pg_per_osd: 100
-target_osds: 6
+target_osds: 3
 bluestore_block_db_size: "1073741824"
 bluestore_block_wal_size: "2147483648"
 mon_osd_full_ratio: .90
 mon_osd_nearfull_ratio: .80
 mon_max_pg_per_osd: 300
 #--------------------------k8s-Helm----------#
-int_domain_suffix: "region2"
+int_domain_suffix: "region1"
 ext_domain_suffix: "logistic.lan"
-pod_resources: false
+pod_resources: true
 #--------------------------Infra-------------#
 infra:
   pool_name: 'cloud.infra'
@@ -45,7 +45,7 @@ memcache:
   memory: 1024
 elastic:
   storage: '5Gi'
-  java_opt: "-Xms1024m -Xmx1024m"
+  java_opt: "-Xms256m -Xmx256m"
 ldap:
   storage: '2Gi'
 prometheus:
@@ -55,9 +55,10 @@ alertmanager:
 #--------------------------OpenStack---------#
 # OpenStack release. Now only queens supported
 OS_release: "queens"
-region: "RegionTwo"
+region: "RegionOne"
 multi_region:
-  master: false
+  master: true
+service_domain: "default"
 supplementary_domains:
 - prod
 - dev
@@ -65,8 +66,8 @@ supplementary_domains:
 # Don't disable it in production env
 gen_passwd: true
 # Whether use external ceph region. Available
-# # values: false or <region name>
-cinder_backup_to_region: RegionOne
+# values: false or <region name>
+cinder_backup_to_region: false
 cinder_pool_percent: 50
 cinder_backup_pool_percent: 5
 infra_pool_percent: 10
@@ -75,12 +76,12 @@ rgw_pool_percent: 15.7
 nova_ephimeral_pool_percent: 5
 #--------------------------Contrail----------#
 BGP_port: 1179
-contrail_bgp_asn: 64513
+contrail_bgp_asn: 64512 
 #--------------------------Monitoring--------#
 monitoring: false
 logging: false
 alertmanager_notif:
-  smtp_smarthost: '192.168.10.194:25'
+  smtp_smarthost: '192.168.0.194:25'
   smtp_from: 'alertmanager@example.com'
   smtp_auth_username: 'alertmanager'
   smtp_auth_password: 'password'
