--- a/roles/deploy_osh/tasks/deploy_common.yaml
+++ b/roles/deploy_osh/tasks/deploy_common.yaml
@@ -27,7 +27,7 @@
   - cinder-backup
 - name: "Run rally test for {{item.name}}"
   shell: "{{helm_bin}} test {{item.name}} --cleanup --timeout 500"
-  when: "test|bool and (lookup('vars', item.name +'_change').changed or helm_release.stdout == 'nok') and item.name not in ['neutron']"
+  when: "rally_test|bool and (lookup('vars', item.name +'_change').changed or helm_release.stdout == 'nok') and item.name not in ['neutron']"
   register: helm_test
   changed_when: helm_test.stdout != 'No Tests Found'
   tags:
