Add delete edge stack action

--- a/roles/edge-router/tasks/main.yml
+++ b/roles/edge-router/tasks/main.yml
@@ -13,23 +13,43 @@
 - name: Set TungstenFabric API endpoint
   set_fact:
     tf_endpoint: "contrail-config-api-{{region|lower}}.{{ext_domain_suffix}}"
-- name: Generate HOT files
-  template:
-    src: "{{item}}.j2"
-    dest: "{{inventory_dir}}/artifacts/{{item}}"
-  with_items:
-  - HOT_edge.yaml
-  - HOT_edge_scale.yaml
-  - edge_router.env
-  register: hot_template
-- name: Deploy edge router(s)
-  os_stack:
-    auth: "{{ks_ep}}"
-    environment: "{{inventory_dir}}/artifacts/edge_router.env"
-    region_name: "{{region}}"
-    state: present
-    template: "{{inventory_dir}}/artifacts/HOT_edge.yaml"
-    timeout: 300
-    wait: true
-    name: EDGE_Router
-  when: "hot_template.results | selectattr('changed') | list | length > 0"
+- block:
+  - name: Generate HOT files
+    template:
+      src: "{{item}}.j2"
+      dest: "{{inventory_dir}}/artifacts/{{item}}"
+    with_items:
+    - HOT_edge.yaml
+    - HOT_edge_scale.yaml
+    - edge_router.env
+    register: hot_template
+  - name: Deploy edge router(s)
+    os_stack:
+      auth: "{{ks_ep}}"
+      environment: "{{inventory_dir}}/artifacts/edge_router.env"
+      region_name: "{{region}}"
+      state: present
+      template: "{{inventory_dir}}/artifacts/HOT_edge.yaml"
+      timeout: 300
+      wait: true
+      name: EDGE_Router
+    when: "hot_template.results | selectattr('changed') | list | length > 0"
+  when: "action == 'apply'"
+- block:
+  - name: Delete HOT files
+    file:
+      path: "{{inventory_dir}}/artifacts/{{item}}"
+      state: absent
+    with_items:
+    - HOT_edge.yaml
+    - HOT_edge_scale.yaml
+    - edge_router.env
+  - name: Delete edge router(s)
+    os_stack:
+      auth: "{{ks_ep}}"
+      region_name: "{{region}}"
+      state: absent
+      timeout: 300
+      wait: true
+      name: EDGE_Router
+  when: "action == 'delete'"
