Change libvirt image

--- a/inventory/regionOne/group_vars/all/osh.yml
+++ b/inventory/regionOne/group_vars/all/osh.yml
@@ -73,7 +73,7 @@ mon_osd_full_ratio: .90
 mon_osd_nearfull_ratio: .80
 mon_max_pg_per_osd: 300
 #--------------------------k8s-Helm----------#
-int_domain_suffix: "region1"
+int_domain_suffix: "{{region}}"
 ext_domain_suffix: "logistic.lan"
 pod_resources: true
 #--------------------------Infra-------------#
