Fix absent systemd-dispatcher dirs and minor changes

--- a/inventory/regionOne/group_vars/all/osh.yml
+++ b/inventory/regionOne/group_vars/all/osh.yml
@@ -38,8 +38,8 @@ output_vrfs:
   hub_prefix: "192.168.254.0/24"
   hub_export_rt: "64512:200"
   hub_import_rt: "64512:100"
-mgnt_vlan: "4"
-mgnt_prefix: "192.168.1.0/24"
+mgnt_vlan: "{{k8s.net}}"
+mgnt_prefix: "{{k8s.vlan}}"
 mgnt_alloc_pool: "192.168.1.200,192.168.1.220"
 mgnt_gw: "192.168.1.138"
 edge_flavor: "c2m4096"
